Remove justify-content center to avoid weird overlap

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -116,7 +116,6 @@ html, body {
   flex-direction: row;
   width: 100%;
   height: 100%;
-  justify-content: center;
   align-items: center;
   overflow-x: auto;
   background-color: red;
